# sim_sci_test_monorepo

./: .gitignore  Jenkinsfile  Makefile  README-Job-DSL.md  README.md  job-dsl-script.groovy  pyproject.toml  setup.sh
.github/workflows/: deploy.yml  pr-checks.yml  release.yml
libs/config_tree/: Jenkinsfile  Makefile  README.md  pyproject.toml
libs/config_tree/src/sim_sci_test_monorepo/config_tree/: __init__.py  config_tree.py
libs/config_tree/tests/: test_config_tree.py
libs/core/: CHANGELOG.rst  Jenkinsfile  pyproject.toml
libs/core/src/sim_sci_test_monorepo/core/: __init__.py  _version.py  utils.py
libs/core/tests/: conftest.py  test_utils.py
libs/gbd-mapping/: pyproject.toml  setup.py
libs/public_health/: .readthedocs.yaml  Jenkinsfile  pyproject.toml
libs/public_health/docs/source/: conf.py
libs/public_health/docs/source/api_reference/: index.rst
libs/public_health/src/sim_sci_test_monorepo/public_health/: __init__.py  models.py
libs/public_health/tests/: test_models.py
resources/: multiPipelines.groovy
vars/: monorepo.groovy
